--- a/Menu/styles.css
+++ b/Menu/styles.css
@@ -1,1 +1,137 @@
+.menu {
+    background-color: #121212;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
+}
+
+.menu .div {
+    background-color: #121212;
+    height: 932px;
+    position: relative;
+    width: 355px;
+}
+
+.menu .x {
+    height: 37px;
+    left: 20px;
+    position: absolute;
+    top: 33px;
+    width: 37px;
+}
+
+.menu .text-wrapper {
+    color: #ffffff;
+    font-family: "Inter-Regular", Helvetica;
+    font-size: 24px;
+    font-weight: 400;
+    left: 95px;
+    letter-spacing: 0;
+    line-height: normal;
+    position: absolute;
+    top: 268px;
+}
+
+.menu .text-wrapper-2 {
+    color: #ffffff;
+    font-family: "Inter-Regular", Helvetica;
+    font-size: 24px;
+    font-weight: 400;
+    left: 95px;
+    letter-spacing: 0;
+    line-height: normal;
+    position: absolute;
+    top: 333px;
+}
+
+.menu .text-wrapper-3 {
+    color: #ffffff;
+    font-family: "Inter-Regular", Helvetica;
+    font-size: 24px;
+    font-weight: 400;
+    left: 95px;
+    letter-spacing: 0;
+    line-height: normal;
+    position: absolute;
+    top: 398px;
+}
+
+.menu .text-wrapper-4 {
+    color: #ffffff;
+    font-family: "Inter-Regular", Helvetica;
+    font-size: 24px;
+    font-weight: 400;
+    left: 95px;
+    letter-spacing: 0;
+    line-height: normal;
+    position: absolute;
+    top: 463px;
+}
+
+.menu .rectangle {
+    height: 73px;
+    left: 48px;
+    object-fit: cover;
+    position: absolute;
+    top: 112px;
+    width: 73px;
+}
+
+.menu .alexandre-peixoto {
+    height: 16px;
+    left: 133px;
+    position: absolute;
+    top: 126px;
+    width: 177px;
+}
+
+.menu .analista-comercial {
+    height: 15px;
+    left: 134px;
+    position: absolute;
+    top: 152px;
+    width: 167px;
+}
+
+.menu .book-open {
+    height: 24px;
+    left: 45px;
+    position: absolute;
+    top: 273px;
+    width: 24px;
+}
+
+.menu .settings {
+    height: 24px;
+    left: 45px;
+    position: absolute;
+    top: 338px;
+    width: 24px;
+}
+
+.menu .help-circle {
+    height: 24px;
+    left: 45px;
+    position: absolute;
+    top: 403px;
+    width: 24px;
+}
+
+.menu .log-out {
+    height: 24px;
+    left: 45px;
+    position: absolute;
+    top: 468px;
+    width: 24px;
+}
+
+.menu .line {
+    height: 1px;
+    left: 43px;
+    object-fit: cover;
+    position: absolute;
+    top: 226px;
+    width: 260px;
+}
 
